# ommr4all-line-detection

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
linesegmentation/datatypes/: datatypes.py
linesegmentation/demo/models/line/marked_lines/: best.data-00000-of-00001  best.index  best_model.h5  model.data-00000-of-00001  model.index
linesegmentation/demo/models/line/virtual_lines/: model.data-00000-of-00001  model.index
linesegmentation/demo/models/region/: model.data-00000-of-00001  model.index
linesegmentation/detection/: __init__.py  callback.py  datatypes.py  detection.py  detection_rest.py  detector.py  lineDetection.py  lineDetectionCallback.py  lineDetectionRest.py  lineDetectionUtil.py  lineDetector.py  settings.py  util.py
linesegmentation/pixelclassifier/: predictor.py
linesegmentation/preprocessing/: polysimplify.py  preprocessingUtil.py  util.py
linesegmentation/preprocessing/binarization/: basic_binarize.py  ocropus_binarizer.py
linesegmentation/preprocessing/enhancing/: enhancer.py
linesegmentation/removal/: dummy_staff_line_removal.py
linesegmentation/scripts/: predict.py  predict_rest.py  train.py
linesegmentation/tests/: tests.py
linesegmentation/util/: image_util.py
