[project]
name = "ommr4all-line-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python-headless>=4,!=4.1.2.30",
    "peakutils>=1.3.5",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
